--- a/.github/workflows/simplePhamTranTuanKhanh.yaml
+++ b/.github/workflows/simplePhamTranTuanKhanh.yaml
@@ -13,4 +13,4 @@ jobs:
       - name: Display greeting
         run: echo Hello from GitHub Actions!
       - name: Custom debug message
-        run: echo Debugging by [Your Name], a test action!
+        run: echo Debugging by Pham Tran Tuan Khanh, a test action!
